Fixed the footer spacing

--- a/sites/all/themes/lapcat/less/compiled.css
+++ b/sites/all/themes/lapcat/less/compiled.css
@@ -1314,9 +1314,9 @@ body {
 }
 
 .imageGrid li div img {
-  height: 6em;
+  height: 7em;
   display: block;
-  padding-right: .46em;
+  padding-right: .8em;
   border-radius: 3px;
 }
 
@@ -1446,6 +1446,7 @@ footer h3 {
 
 footer .socialLinks {
   margin-top: 2em;
+  margin-bottom: .5em;
   opacity: .9;
   height: auto;
 }
