--- a/sites/all/themes/lapcat/less/layout.less
+++ b/sites/all/themes/lapcat/less/layout.less
@@ -1017,6 +1017,7 @@ footer {
   }
   .socialLinks{
     margin-top:2em;
+    margin-bottom:.5em;
     li{
       width:3.615em;
     }
